bk_ida/gccida/g1/reload_combine_note_use
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_combine_note_use/src/reload1.c:9421:4: error: expected ';' after expression
rtx v6; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_combine_note_use/src/reload1.c:9421:5: error: use of undeclared identifier 'v6'
rtx v6; // rdi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_combine_note_use/src/reload1.c:9426:6: error: use of undeclared identifier 'v11'; did you mean 'v10'?
rtx *v11; // rbp 
     ^~~
     v10
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_combine_note_use/src/reload1.c:9425:13: note: 'v10' declared here
const char *v10; // r13 
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_combine_note_use/src/reload1.c:9426:5: error: invalid operands to binary expression ('rtx' (aka 'struct rtx_def *') and 'const char *')
rtx *v11; // rbp 
~~~ ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_combine_note_use/src/reload1.c:9456:1: error: use of undeclared identifier 'v6'
v6 = const_int_rtx[64]; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_combine_note_use/src/reload1.c:9462:33: error: expected expression
reload_combine_note_use( ( rtx *)&rtx[1], insn); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_combine_note_use/src/reload1.c:9465:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v12.rtwint = ( __int64)rtx->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_combine_note_use/src/reload1.c:9474:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v15 = ( ( unsigned int)( mode_class_0[*( unsigned __int8 *)( v12.rtwint + 2)] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_combine_note_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_combine_note_use/src/reload1.c:9506:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v20.rtwint = ( __int64)rtx->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_combine_note_use/src/reload1.c:9517:1: error: use of undeclared identifier 'v6'
v6 = ( rtx)rtx[1]; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_combine_note_use/src/reload1.c:9518:17: error: use of undeclared identifier 'v6'
if ( *( _WORD *)v6 != 54 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_combine_note_use/src/reload1.c:9558:23: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( mode_class_0[*( ( unsigned __int8 *)rtx + 2)] - 5) <= 1 ) 
                      ^~~~~~~~~~~~
                      mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_combine_note_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_combine_note_use/src/reload1.c:9571:25: error: use of undeclared identifier 'v6'
reg_state[v24].offset = v6; 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_combine_note_use/src/reload1.c:9580:19: error: use of undeclared identifier 'v6'
if ( rtx_equal_p( v6, reg_state[( int)rtuint].offset) ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_combine_note_use/src/reload1.c:9593:14: error: expected expression
v11 = ( rtx *)rtx + v8; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_combine_note_use/src/reload1.c:9593:1: error: use of undeclared identifier 'v11'
v11 = ( rtx *)rtx + v8; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_combine_note_use/src/reload1.c:9599:26: error: use of undeclared identifier 'v11'
reload_combine_note_use( v11, insn); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_combine_note_use/src/reload1.c:9603:20: error: use of undeclared identifier 'v11'; did you mean 'v10'?
v33 = *( _DWORD *)*v11; 
                   ^~~
                   v10
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_combine_note_use/src/reload1.c:9425:13: note: 'v10' declared here
const char *v10; // r13 
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_combine_note_use/src/reload1.c:9610:33: error: expected expression
reload_combine_note_use( ( rtx *)( ( char *)*v11 + v34), insn); 
                                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_combine_note_use/src/obj/reload1.o] Error 1
